--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-table": "^8.10.6",
     "next": "13.5.4",
     "react": "^18",
+    "react-dnd": "^16.0.1",
     "react-dom": "^18"
   },
   "devDependencies": {
