--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18"
   },
   "devDependencies": {
